--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,37 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>WaypointYouthCommunityCenter</title>
+  <title>Waypoint Youth & Community Center</title>
+  <meta name="description" content="Waypoint Youth & Community Center">
+  <meta name="author" content="Joshua Ballas">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" rel="stylesheet" type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,400,400i,700,700i" rel="stylesheet" type='text/css'>
 </head>
+
 <body>
   <app-root></app-root>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118737104-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-118737104-1');
+
+  </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/gcal.min.js"></script>
 </body>
+
 </html>
