--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" rel="stylesheet" type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,400,400i,700,700i" rel="stylesheet" type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
 </head>
 
 <body>
