--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Waypoint Youth & Community Center</title>
   <meta name="description" content="Waypoint Youth & Community Center">
-  <meta name="keywords" content="waypoint, community, center, waypoint community center, waypoint youth center, waypoint worship">
+  <meta name="keywords" content="waypoint, community center, waypoint community center, waypoint youth center, waypoint worship">
   <meta name="author" content="Joshua Ballas">
   <base href="/">
 
